--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/fx.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-math3-3.5.jar=lib/commons-math3-3.5.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=lib/mysql-connector-java-5.1.35-bin.jar
 file.reference.rxjava-1.0.8.jar=lib/rxjava-1.0.8.jar
 file.reference.ta-lib-0.4.0.jar=lib/ta-lib-0.4.0.jar
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
     ${file.reference.rxjava-1.0.8.jar}:\
-    ${file.reference.ta-lib-0.4.0.jar}
+    ${file.reference.ta-lib-0.4.0.jar}:\
+    ${file.reference.commons-math3-3.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
